--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -9,6 +9,11 @@
     }
 }
 
+.btn-primary {
+    background-color: $primary;
+    border-color: $primary;
+}
+
 .btn-primary:hover {
     color: $primary;
     background-color: $white;
