--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -27,3 +27,39 @@
 .is-invalid .css-1s2u09g-control {
     border-color: $danger;
 }
+
+.form-check-label {
+    color: $gray-800;
+}
+
+.my-custom-react-select__control {
+    border-width: 1px !important;
+    border-color: #cbd5e0 !important;
+}
+
+.my-custom-react-select__control--is-focused {
+    border-color: #746df7 !important;
+    box-shadow: none !important;
+}
+
+.my-custom-react-select__indicator-separator {
+    display: none;
+}
+
+.toprightclose {
+    padding: 3px 9px !important;
+    background: $primary;
+    border: $primary;
+    color: $white;
+    font-size: 16px;
+    border-radius: 20px;
+    padding: 0 5px;
+    @media screen and (max-width: 767px) {
+        right: -70px;
+        top: -67px;
+    }
+    @media screen and (min-width: 768px) {
+        right: -88px;
+        top: -100px;
+    }
+}
