--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -72,3 +72,13 @@
         top: -100px;
     }
 }
+
+.wh-118 {
+    width: 118px !important;
+    height: 118px !important;
+}
+
+.wh-40 {
+    width: 40px !important;
+    height: 40px !important;
+}
