--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -105,7 +105,8 @@ header {
     z-index: 1049 !important;
 }
 
-.drawer {
+.drawer,
+.full-screen-drawer {
     z-index: 1050 !important;
 }
 
@@ -113,4 +114,9 @@ header {
     &:hover {
         color: $themePrimary !important;
     }
+}
+
+.drawer-supplier-hr {
+    color: $secondary;
+    margin: 40px 0;
 }
