--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -128,3 +128,7 @@ header {
     color: $secondary;
     margin: 40px 0;
 }
+
+.text-decoration-dotted {
+    text-decoration: underline dotted !important;
+}
